--- a/config/database.yml
+++ b/config/database.yml
@@ -76,11 +76,11 @@ test:
 #
 # You can use this database configuration with:
 #
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
-  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
+#
+#production:
+#  <<: *default
   #database: catering_production
   #username: catering
   #password: <%= ENV['CATERING_DATABASE_PASSWORD'] %>
