--- a/config/database.yml
+++ b/config/database.yml
@@ -17,13 +17,13 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  database: catering_project
-  username: nikolai
-  password: nikolai
   pool: 5
 
 development:
   <<: *default
+  database: catering_project
+  username: nikolai
+  password: nikolai
   #database: catering_development
 
   # The specified database role being used to connect to postgres.
@@ -58,6 +58,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: catering_test
+  username: nikolai
+  password: nikolai
   #database: catering_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
